--- a/index.html
+++ b/index.html
@@ -186,86 +186,78 @@
             <div class="made-for-you">
                 <div class="main-items-container">
                     <div class="main-items">
-                        <img src="images/charlie2.jpeg">
+                        <img src="images/song.jpeg">
                         <div>
                             <h4>Daily Mix Week 1</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
                     <div class="main-items">
                             <img src="images/song.jpeg">
                         <div>
                             <h4>Daily Mix Week 2</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
                     <div class="main-items">
                             <img src="images/song.jpeg">
                         <div>
                             <h4>Daily Mix Week 3</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
                     <div class="main-items">
                             <img src="images/song.jpeg">
                         <div>
                             <h4>Daily Mix Week 4</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
                     <div class="main-items">
                         <img src="images/song.jpeg">
                         <div>
                             <h4>Daily Mix Week 5</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <h2>Jump Back</h2>
             <div class="jump-back">
-                <h2>Jump Back In</h2>
                 <div class="main-items-container">
                     <div class="main-items">
-                        <img src="images/song.jpeg">
+                        <img src="images/charlie2.jpeg">
                         <div>
                             <h4>Daily Mix Week 1</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
-                </div>
-                <div class="main-items-container">
                     <div class="main-items">
-                        <img src="images/song.jpeg">
+                            <img src="images/xxxtentacion0.jpeg">
                         <div>
-                            <h4>Daily Mix Week 1</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <h4>Daily Mix Week 2</h4>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
-                </div>
-                <div class="main-items-container">
                     <div class="main-items">
-                        <img src="images/song.jpeg">
+                            <img src="images/faded.jpeg">
                         <div>
-                            <h4>Daily Mix Week 1</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <h4>Daily Mix Week 3</h4>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
-                </div>
-                <div class="main-items-container">
                     <div class="main-items">
-                        <img src="images/song.jpeg">
+                            <img src="images/see you again.jpeg">
                         <div>
-                            <h4>Daily Mix Week 1</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <h4>Daily Mix Week 4</h4>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
-                </div>
-                <div class="main-items-container">
                     <div class="main-items">
-                        <img src="images/song.jpeg">
+                        <img src="images/on my way.jpeg">
                         <div>
-                            <h4>Daily Mix Week 1</h4>
-                            <p>Sanzu, Sanzu, Sanzu, Sanzu and more</p>
+                            <h4>Daily Mix Week 5</h4>
+                            <p>Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, Sanzu, and more</p>
                         </div>
                     </div>
                 </div>
